tests/baselines/reference/unusedClassesinModule1.errors.txt
tests/cases/compiler/unusedClassesinModule1.ts(3,11): error TS6133: 'Calculator' is declared but never used.


==== tests/cases/compiler/unusedClassesinModule1.ts (1 errors) ====
    
    module A {
        class Calculator {
              ~~~~~~~~~~
!!! error TS6133: 'Calculator' is declared but never used.
            public handelChar() {
            }
        }
    }